# unified-probabilistic-validation

./: .gitignore  README.md  app.py  build_thesis.py  pyproject.toml  rename_entsog_to_entsoe.ps1  requirements.txt  requirements_streamlit.txt  run_all.py
data/: README.md  entsog_sample.csv  entsog_sample_90days.csv
experiments/: run_001_entsoe.py  run_001_entsog.py  run_002_pv.py  run_003_wind.py  run_004_simulation.py  run_004b_simulation_misspec.py  run_005_multivariate.py  run_006_var_sensitivity.py  run_007_transition_metrics.py  run_008_report_cards.py  run_009_entsoe_wind.py  run_009b_entsoe_wind_daily.py  run_010_entsoe_solar.py  run_010b_entsoe_solar_daily.py
notebooks/: 01_synthetic_validation.ipynb  02_entsoe_90days.ipynb  02_entsoe_feasibility.ipynb  02_entsog_90days.ipynb  02_entsog_feasibility.ipynb  03_diagnostics.ipynb  04_conformal_wrapping.ipynb  simulated_data_extended.ipynb
papers/: 00_abstract.md  01_introduction.md  02_methodology.md  03_results.md  04_discussion.md  05_governance_implications.md  06_references_and_ai_statement.md
scripts/: build_entsoe_derived.py  build_entsoe_renewables_derived.py  build_entsog_derived.py  build_renewables_derived.py  build_simulation_derived.py  build_simulation_misspec.py  download_entsoe_renewables.py  plot_pit_diagnostics.py
tests/: test_adapter_point_forecast.py  test_adapter_quantiles.py  test_adapter_simulation_joint.py  test_build_dist_from_residuals.py  test_data_contract.py  test_decision_engine.py  test_diagnostics_input.py  test_interval_sharpness.py  test_regime_tagger.py  (+2 more)
(+231 files in other folders)
