[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-probabilistic-validation"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "statsmodels",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]